@@ -1,4 +1,4 @@
-// Copyright 2004-2009 Castle Project - http://www.castleproject.org/
+// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -14,41 +14,24 @@
 
 namespace Castle.Facilities.Logging.Tests
 {
-    using System;
-
-    using Castle.Core.Logging;
+	using Castle.Core.Logging;
 	using Castle.Facilities.Logging.Tests.Classes;
-    using Castle.MicroKernel.Registration;
-    using Castle.Windsor;
+	using Castle.MicroKernel.Registration;
+	using Castle.Windsor;
+
 	using NUnit.Framework;
 
 	[TestFixture]
-    public class Facilities77 : BaseTest
-    {
-
-		[Test]
-		public void ShouldCallNoArgsContstructorIfConfigFileNotSpecified()
-		{
-			IWindsorContainer container =
-				CreateConfiguredContainer(LoggerImplementation.Custom, typeof(TestLoggerFactory).AssemblyQualifiedName);
-
-			container.Register(Component.For(typeof(SimpleLoggingComponent)).Named("component"));
-			SimpleLoggingComponent test = container["component"] as SimpleLoggingComponent;
-
-			TestLoggerFactory logFactory = (TestLoggerFactory) container.Kernel["iloggerfactory"];
-			Assert.IsTrue(logFactory.NoArgsConstructorWasCalled,"No args constructor was not called");
-
-		}
-	
+	public class Facilities77 : BaseTest
+	{
 		public class TestLoggerFactory : AbstractLoggerFactory
 		{
-			public bool NoArgsConstructorWasCalled = false;
+			public bool NoArgsConstructorWasCalled;
 
 			public TestLoggerFactory() : this("someconfigfile")
 			{
 				NoArgsConstructorWasCalled = true;
 			}
-
 
 			public TestLoggerFactory(string configFile)
 			{
@@ -65,5 +48,17 @@ namespace Castle.Facilities.Logging.Tests
 				return NullLogger.Instance;
 			}
 		}
-    }
+
+		[Test]
+		public void ShouldCallNoArgsContstructorIfConfigFileNotSpecified()
+		{
+			var container = new WindsorContainer().AddFacility<LoggingFacility>(f => f.LogUsing<TestLoggerFactory>());
+
+			container.Register(Component.For<SimpleLoggingComponent>().Named("component"));
+			container.Resolve<SimpleLoggingComponent>("component");
+
+			var logFactory = container.Resolve<TestLoggerFactory>("iloggerfactory");
+			Assert.IsTrue(logFactory.NoArgsConstructorWasCalled, "No args constructor was not called");
+		}
+	}
 }
